--- a/index.html
+++ b/index.html
@@ -260,29 +260,29 @@
 					<div class="col-sm-4">
 						Annuaires liste 1
 						<ul>
-							<li><a href="annuaireagence.com">annuaireagence.com</a></li>
-							<li><a href="annuaireseo.com">annuaireseo.com</a></li>
-							<li><a href="annuairemarketing.com">annuairemarketing.com</a></li>
-							<li><a href="123seoture.com">123seo.com</a></li>
-							<li><a href="123site.com">123site.com</a></li>
-							<li><a href="annuairewordpress.com">annuairewordpress.com</a></li>
-							<li><a href="listeagence.com">listeagence.com</a></li>
-							<li><a href="meilleuresagencesparis.com">meilleuresagencesparis.com</a></li>
-							<li><a href="listeseo.com">listeseo.com</a></li>
+							<li><a href="annuaireagence.com" alt="annuaireagence.com">annuaireagence.com</a></li>
+							<li><a href="annuaireseo.com" alt="annuaireseo.com">annuaireseo.com</a></li>
+							<li><a href="annuairemarketing.com" alt="annuairemarketing.com">annuairemarketing.com</a></li>
+							<li><a href="123seoture.com" alt="123seo.com">123seo.com</a></li>
+							<li><a href="123site.com" alt="123site.com">123site.com</a></li>
+							<li><a href="annuairewordpress.com" alt="annuairewordpress.com">annuairewordpress.com</a></li>
+							<li><a href="listeagence.com" alt="listeagence.com">listeagence.com</a></li>
+							<li><a href="meilleuresagencesparis.com" alt="meilleuresagencesparis.com">meilleuresagencesparis.com</a></li>
+							<li><a href="listeseo.com" alt="listeseo.com">listeseo.com</a></li>
 						</ul>
 					</div>
 					<div class="col-sm-4">
 						Annuaires liste 2
 						<ul>
-							<li><a href="betterseo.com">betterseo.com</a></li>
-							<li><a href="ameliorerseo.com">ameliorerseo.com</a></li>
-							<li><a href="seojuicelien.com">seojuicelien.com</a></li>
-							<li><a href="meilleursliens.com">meilleursliens.com</a></li>
-							<li><a href="liensagogo.com">liensagogo.com</a></li>
-							<li><a href="backlink.com">backlink.com</a></li>
-							<li><a href="linkjuiceannuaire.com">linkjuiceannuaire.com</a></li>
-							<li><a href="remontersurgoogle.com">remontersurgoogle.com</a></li>
-							<li><a href="vraiseofiable.com">vraiseofiable.com</a></li>
+							<li><a href="betterseo.com" alt="betterseo.com">betterseo.com</a></li>
+							<li><a href="ameliorerseo.com" alt="ameliorerseo.com">ameliorerseo.com</a></li>
+							<li><a href="seojuicelien.com" alt="seojuicelien.com">seojuicelien.com</a></li>
+							<li><a href="meilleursliens.com" alt="meilleursliens.com">meilleursliens.com</a></li>
+							<li><a href="liensagogo.com" alt="liensagogo.com">liensagogo.com</a></li>
+							<li><a href="backlink.com" alt="backlink.com">backlink.com</a></li>
+							<li><a href="linkjuiceannuaire.com" alt="linkjuiceannuaire.com">linkjuiceannuaire.com</a></li>
+							<li><a href="remontersurgoogle.com" alt="remontersurgoogle.com">remontersurgoogle.com</a></li>
+							<li><a href="vraiseofiable.com" alt="vraiseofiable.com">vraiseofiable.com</a></li>
 						</ul>
 					</div>
 				</div>
