--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		<nav class="navbar row">
 			<div class="navbar-header">
 				<div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
-				<a class="navbar-brand" href="index.html" alt="index" ><img src="img/la-chouette-agence.png" alt="logo chouette agence" height="40" /></a>
+				<a class="navbar-brand" href="index.html" alt="index" ><img src="img/la-chouette-agence.png" alt="logo chouette agence" height="40" />la-chouette-agence</a>
 				<div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
